# zed2i_slam_autonomus_navigation

./: README.md
src/airplane_detection/: CMakeLists.txt  package.xml
src/airplane_detection/airplane_detection/: __init__.py  detector.py
src/airplane_detection/config/: detection_params.yaml
src/airplane_detection/launch/: detection.launch.py
src/airplane_detection/scripts/: airplane_detector_node.py  detection_visualizer.py
src/autonomous_nav/: CMakeLists.txt  package.xml  setup.py
src/autonomous_nav/autonomous_nav/: __init__.py  obstacle_detection.py  zed_point_cloud_processor.py
src/autonomous_nav/autonomous_nav/costmap/: __init__.py  costmap_generator.py  grid_utils.py  sensor_processing.py
src/autonomous_nav/autonomous_nav/scripts/: __init__.py  local_costmap_generator.py
src/autonomous_nav/config/: nav2_params.yaml  navigation_params.yaml  slam_params.yaml  waypoints_sample.yaml
src/autonomous_nav/launch/: autonomous_navigation.launch.py  direct_zed_slam.launch.py  dynamic_costmap.launch.py  map_publisher_test.launch.py  save_costmap.launch.py  simple_slam.launch.py  slam_navigation.launch.py  test_point_cloud_processor.launch.py  waypoint_navigation.launch.py  zed2i_slam.launch.py  zed_slam.launch.py
src/autonomous_nav/rviz/: costmap_only.rviz  navigation.rviz  real_costmap.rviz
src/autonomous_nav/scripts/: autonomous_airplane_inspector.py  costmap_saver.py  global_costmap_relay.py  local_costmap_generator.py  map_publisher.py  map_updates_publisher.py  obstacle_avoidance.py  path_planner.py  point_cloud_processor_node.py  static_map_publisher.py  static_odom_publisher.py  waypoint_manager.py  waypoint_navigator.py  waypoint_starter.py  zed_camera_check.py  zed_camera_monitor.py
src/inspection_planner/: CMakeLists.txt  package.xml
src/inspection_planner/config/: inspection_params.yaml
src/inspection_planner/inspection_planner/: __init__.py  inspection_patterns.py
src/inspection_planner/launch/: inspection.launch.py
src/inspection_planner/scripts/: inspection_planner_node.py  inspection_visualizer.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/rviz/: urdf_config.rviz
src/robot_description/urdf/: robot.urdf.xacro  robot_base.xacro  simple_robot.urdf.xacro  zed2i.xacro
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: AirplaneDetection.msg  InspectionStatus.msg
src/robot_interfaces/srv/: SetInspectionTarget.srv
src/xavier_robotics/: CMakeLists.txt  README.md  README_COSTMAP.md  README_DYNAMIC_COSTMAP.md  README_NAVIGATION.md  README_NO_PURPLE.md  package.xml
src/xavier_robotics/launch/: airplane_inspection_system.launch.py  autonomous_airplane_inspection.launch.py  real_camera_only.launch.py  real_costmap_inspection.launch.py  static_map_navigation.launch.py  temporary_inspection.launch.py
src/xavier_robotics/scripts/: check_costmaps.sh  debug_costmap.py  launch_inspection.sh  run_costmap_with_debug.sh  run_dynamic_costmap.sh  run_full_navigation.sh  run_real_camera_only.sh  run_real_costmap.sh  run_static_map_navigation.sh  save_dynamic_costmap.sh  test_costmap_display.sh
