<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xavier_robotics</name>
  <version>0.1.0</version>
  <description>
    Autonomous airplane inspection system with dynamic obstacle avoidance
  </description>
  <maintainer email="user@todo.todo">x4</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_description</depend>
  <depend>airplane_detection</depend>
  <depend>autonomous_nav</depend>
  <depend>inspection_planner</depend>
  <depend>robot_interfaces</depend>
  <depend>zed_wrapper</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
